hadash/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hadash
  name: hadash
  namespace: hadash
spec:
  selector:
    app: hadash
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
