hadash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hadash
  namespace: hadash
spec:
  ingressClassName: traefik
  rules:
  - host: hadash.homelab.internal
    http:
      paths:
      - backend:
          service:
            name: hadash
            port:
              number: 80
        path: /
        pathType: Prefix
